# dat160-semesteroppgave

./: build  new_package  readme.md  setup_symlinks  source
bug2_interfaces/: CMakeLists.txt  package.xml
bug2_interfaces/srv/: PointMover.srv
bug2_navigation/: package.xml  setup.py
bug2_navigation/bug2_navigation/: bug2_controller.py  go_to_point.py  manual_service_test.py  wall_follower.py
bug2_navigation/launch/: spawn_robot.launch.py
final_iteration/: package.xml  setup.cfg  setup.py
final_iteration/final_iteration/: aruco_detector.py  final_iteration.py  wall_follower.py
final_iteration/launch/: final_iteration.launch.py
map_dep_grid_test/: package.xml  setup.cfg  setup.py
map_dep_grid_test/map_dep_grid_test/: map_dep_grid_test.py
sem_oppg_msgs/: CMakeLists.txt  package.xml
test_aruco/: package.xml  setup.cfg  setup.py
test_aruco/launch/: launch_aruco.launch.py
test_aruco/test_aruco/: test_aruco.py
test_aruco/tmp/: aruco_test_image.py  gen_tag.py
test_map_parse/: move_service_server.py  package.xml  setup.cfg  setup.py
test_map_parse/test_map_parse/: MovementController.py  gotopoint.py  move_service_server.py  test_map_parse.py  test_nav.py
